--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,13 @@
 			<artifactId>spring-security-crypto</artifactId>
 			<version>5.5.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.6.1</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
